[package]
name = "tracing-xray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.6"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-core = "0.1"
tracing-serde = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "json", "std"] }
tokio = { version = "1.17.0", features = ["net", "rt", "macros"] }
tokio-util = { version = "0.7.1", features = ["net"] }
